# embed-check

./: .gitignore  Makefile  README.md  embed  embed-check  embed-check.sh  hello.c  hello.elf  package-lock.json  package.json  requirements.txt  tm4c123g.ld  tm4c123g_startup_gcc.c
.github/workflows/: test-install.yml
boards/: esp32dev.json  stm32f103c8.json  tivac-launchpad.json
families/: arduino.sh  espressif.sh  gd32.sh  infineon.sh  microchip.sh  nuvoton.sh  nxp.sh  renesas.sh  silabs.sh  stm32.sh  ti.sh
lib/: colors.sh  helpers.sh  os_detect.sh  status_vars.sh  tool_meta.sh
lib/states/: check_tools.sh  error.sh  exit.sh  init.sh  install_tools.sh  parse_args.sh  summary.sh
my_c_project/: .board.json  main
src/: main.py
templates/c/: Makefile
templates/cpp/: main.cpp
templates/rust/: main.rs
templates/rust/embedded_template/: Cargo.toml  build.rs  memory.x
templates/rust/embedded_template/.cargo/: config.toml
templates/rust/embedded_template/src/: main.rs
test/: embed-check.bats
