[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"

[profile.dev]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice
lto = "fat" # whole program optimization
opt-level = "s" # optimize for size
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice
lto = "fat" # whole program optimization
opt-level = "s" # optimize for size
incremental = false

[build-dependencies]
# Add build-specific dependencies here, e.g.,
# cc = "1.0"

[features]
# Add board-specific features here, e.g.,
# stm32f407 = ["stm32f4xx-hal/stm32f407"]
